--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
 ---
 # This manifest deploys a Python Flask application with a Redis database
 applications:
-- name: nyu-lab-bluemix
+- name: nyu-lab-bluemix-nab
   memory: 64M
-  instances: 2
+  instances: 3
   #random-route: true
-  host: nyu-lab-bluemix
+  host: nyu-lab-bluemix-nab
   domain: mybluemix.net
   path: .
   disk_quota: 512M
